# opengl_next

./: CMakeLists.txt  README.md  main.cpp
application/: Application.cpp  CMakeLists.txt
application/include/: Application.h  user_interface.h
application/src/: Application.cpp  user_interface.cpp
asset/hdri/: Ramp119.hdr
glframework/: CMakeLists.txt
glframework/include/: GLResources.h  base_model.h  bloom.h  camera.h  cubemap.h  gameobject.h  light.h  mesh.h  model.h  opengl_utils.h  pbr.hpp  render.h  shader.h
glframework/src/: GLResources.cpp  bloom.cpp  cubemap.cpp  gameobject.cpp  light.cpp  model.cpp  render.cpp  shader.cpp
imgui/: CmakeLists.txt
imgui/src/: ImGuiBuild.cpp
libs/: yaml-cppd.lib
shaders/6/: 3.1.2.shadow_mapping.fs  3.1.2.shadow_mapping.vs  6.1.skybox.fs  6.1.skybox.vs
shaders/hoho/: edge_outlining.frag  skybox.frag
shaders/pbr/: 1.1.pbr.frag  1.1.pbr.fs
shaders/pbr/2/: 2.1.1.background.vs  2.1.1.cubemap.vs  2.1.1.equirectangular_to_cubemap.fs  2.1.1.pbr.fs
shaders/pbr/2.2/: 2.2.1.pbr.frag  2.2.1.pbr.vert  2.2.1.pbr_no_normal.frag  2.2.1.pbr_no_normal.vert
shaders/pbr/hoho/: 1.model_loading.frag  1.model_loading.vert  1.model_loading1.frag  vertices_3d_model.vert
wrapper/: CMakeLists.txt
wrapper/include/: Logger.hpp  YamlLoader.h  file_system.h  log.h  singleton_util.h  tinyexr.h
wrapper/src/: file_system.cpp  log.cpp
